# AppNetComms

./: .gitignore  LICENSE  README.md  ReleaseNotes.md  pyproject.toml
src/appnetcomms/: __init__.py  client.py  common.py  constants.py  data_packet.py  request_handler_factory.py  server.py  socket_server_factory.py  socket_server_wrappers.py  tcp_handler.py  typing.py  udp_handler.py  validation.py
tests/: conftest.py  constants.py
tests/server/: test_server.py
